--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -227,6 +227,7 @@ DOMAIN-SUFFIX,t.cr-nielsen.com,REJECT
 DOMAIN-SUFFIX,tns.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,traffic.uusee.com,REJECT
 DOMAIN-SUFFIX,union.6.cn,REJECT
+DOMAIN-SUFFIX,www.founseezb.cn,REJECT
 IP-CIDR,123.125.117.0/22,REJECT,no-resolve #aiqiyi
 ## END ADBlock
 
