屏蔽掉书包网APP广告

--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -227,8 +227,9 @@ DOMAIN-SUFFIX,t.cr-nielsen.com,REJECT
 DOMAIN-SUFFIX,tns.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,traffic.uusee.com,REJECT
 DOMAIN-SUFFIX,union.6.cn,REJECT
-DOMAIN-SUFFIX,www.founseezb.cn,REJECT
 IP-CIDR,123.125.117.0/22,REJECT,no-resolve #aiqiyi
+#shu bao wang app
+DOMAIN-SUFFIX,www.founseezb.cn,REJECT
 ## END ADBlock
 
 ## Proxy
