--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -230,6 +230,7 @@ DOMAIN-SUFFIX,union.6.cn,REJECT
 IP-CIDR,123.125.117.0/22,REJECT,no-resolve #aiqiyi
 #shu bao wang app
 DOMAIN-SUFFIX,www.founseezb.cn,REJECT
+DOMAIN-SUFFIX,s.xnjpg.com,REJECT
 ## END ADBlock
 
 ## Proxy
