--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -231,6 +231,7 @@ IP-CIDR,123.125.117.0/22,REJECT,no-resolve #aiqiyi
 #shu bao wang app
 DOMAIN-SUFFIX,www.founseezb.cn,REJECT
 DOMAIN-SUFFIX,s.xnjpg.com,REJECT
+DOMAIN-SUFFIX,uc.biquge.cc,REJECT
 ## END ADBlock
 
 ## Proxy
