--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -232,6 +232,7 @@ IP-CIDR,123.125.117.0/22,REJECT,no-resolve #aiqiyi
 DOMAIN-SUFFIX,www.founseezb.cn,REJECT
 DOMAIN-SUFFIX,s.xnjpg.com,REJECT
 DOMAIN-SUFFIX,uc.biquge.cc,REJECT
+DOMAIN-SUFFIX,changyan.sohu.com,REJECT
 ## END ADBlock
 
 ## Proxy
