添加一些小说网站、APP广告屏蔽规则

--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -228,7 +228,7 @@ DOMAIN-SUFFIX,tns.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,traffic.uusee.com,REJECT
 DOMAIN-SUFFIX,union.6.cn,REJECT
 IP-CIDR,123.125.117.0/22,REJECT,no-resolve #aiqiyi
-#shu bao wang app
+#xiao shuo ads
 DOMAIN-SUFFIX,www.founseezb.cn,REJECT
 DOMAIN-SUFFIX,s.xnjpg.com,REJECT
 DOMAIN-SUFFIX,uc.biquge.cc,REJECT
