--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -233,6 +233,12 @@ DOMAIN-SUFFIX,www.founseezb.cn,REJECT
 DOMAIN-SUFFIX,s.xnjpg.com,REJECT
 DOMAIN-SUFFIX,uc.biquge.cc,REJECT
 DOMAIN-SUFFIX,changyan.sohu.com,REJECT
+DOMAIN-SUFFIX,www.taiyuanjiu.cn,REJECT
+DOMAIN-SUFFIX,www.istage.com.cn,REJECT
+DOMAIN-SUFFIX,www.number1cp.cn,REJECT
+DOMAIN-SUFFIX,fen.dkdlsj.com,REJECT
+DOMAIN-SUFFIX,s.mgwcn.com,REJECT
+DOMAIN-SUFFIX,taob.bjjlcfw.com,REJECT
 ## END ADBlock
 
 ## Proxy
