--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -239,6 +239,7 @@ DOMAIN-SUFFIX,www.number1cp.cn,REJECT
 DOMAIN-SUFFIX,fen.dkdlsj.com,REJECT
 DOMAIN-SUFFIX,s.mgwcn.com,REJECT
 DOMAIN-SUFFIX,taob.bjjlcfw.com,REJECT
+DOMAIN-SUFFIX,gog9.qzdfc.com,REJECT
 ## END ADBlock
 
 ## Proxy
