--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -240,6 +240,7 @@ DOMAIN-SUFFIX,fen.dkdlsj.com,REJECT
 DOMAIN-SUFFIX,s.mgwcn.com,REJECT
 DOMAIN-SUFFIX,taob.bjjlcfw.com,REJECT
 DOMAIN-SUFFIX,gog9.qzdfc.com,REJECT
+DOMAIN-SUFFIX,wxxx.mwnyr.com,REJECT
 ## END ADBlock
 
 ## Proxy
